<?xml version="1.0" encoding="utf-8"?>
<resources>
	<color name="white">#FFF</color>
	<color name="black">#000</color>
	<string name="newline">""</string>
    <string name="app_name">Carpooler</string>
    <string name="hello">Welcome to Carpooler!</string>
    <string name="click">"Just click on next and we will get you started!"</string>
    <string name="connect_option1">Connect!</string>
    <string name="connect_option2">No, Thanks!</string>
    <string name="connect_text1">Carpooler will be a lot effective if you can connect it with your Facebook and Twitter accounts</string>
    <string name="username">Username</string>
    <string name="passwd">Password</string>
    <string name="list">Did you mean?</string>
</resources>
