<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sample"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/newline"
    />

<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/newline"
    />    
    
 <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/connect_text1"
    />
    
 <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/newline"
    />
    
 <RadioGroup android:layout_width="wrap_content" 
      android:layout_height="wrap_content" android:orientation="vertical" 
      android:id="@+id/connect_group1">
      <RadioButton android:checked="true"
           android:text="@string/connect_option1" android:id="@+id/connect_option1"
           android:textColor = "@color/white"
           android:layout_width="wrap_content" android:layout_height="wrap_content" /> 
      <RadioButton android:checked="false" 
           android:text="@string/connect_option2" android:id="@+id/connect_option2"
           android:textColor = "@color/white" 
           android:layout_width="wrap_content" android:layout_height="wrap_content"/> 
 </RadioGroup>
    
 <AbsoluteLayout 
  	xmlns:android="http://schemas.android.com/apk/res/android" 
  	android:orientation="vertical" 
  	android:layout_width="fill_parent" 
  	android:layout_height="fill_parent"> 

	<Button android:id="@+id/connect_next" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="   Next   " 
		android:layout_y="120px" 
		android:layout_x="200px">
	</Button>
 </AbsoluteLayout>
</LinearLayout>
