<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sample"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/newline"
    />

<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/newline"
    />    
    
 <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    android:textColor = "@color/white"
    />
    
 <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/newline"
    />
    
 <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/click"
    android:textColor="@color/white"
    />
    
 <AbsoluteLayout 
  	xmlns:android="http://schemas.android.com/apk/res/android" 
  	android:orientation="vertical" 
  	android:layout_width="fill_parent" 
  	android:layout_height="fill_parent"> 

	<Button android:id="@+id/welcome_next" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="   Next   " 
		android:layout_y="230px" 
		android:layout_x="200px">
	</Button>
 </AbsoluteLayout>
</LinearLayout>
